2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* src/nancy_bot/msgdata.cpp,
	src/nancy_bot/nancybot.cpp,
	src/nancy_bot/msgdata.h: Fixed an auto-learning mistake.

2005-08-22  Kanru Chen  <koster@debian.org.tw>

	* src/view/telnetview.cpp
	(CTelnetView::OnHyperlinkClicked):
	Disable parsing telnet:// in firefox plugin.

	* configure.ac:
	Bump release version to 0.3.1.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetview.cpp:
	Convert all '\n' characters to correct CR/LF before pasting text
	from the clipboard.
	This is just a workaround and should be fixed in the future.

2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* data/nancy_bot/default_msg.data,
	data/nancy_bot/default.conf: Added more comments for user.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/view/telnetview.cpp:
	Convert UTF-8 encoded text from clipboad to site-specific encoding.
	This can prevent the broken UTF-8 string caused by auto-wrap.
	This is just a workaround and should be fixed in the future.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/nancy_bot/msgdata.cpp:
	Remove MsgData::my_copy(), use copyfile() instead.

2005-08-22  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/core/fileutil.c:
	Add copyfile() to copy file since it's not provided by the system.

	* src/nancy_bot/msgdata.cpp:
	Remove MsgData::my_copy(), use copyfile() instead.

	* src/nancy_bot/nancybot.cpp:
	Change default learning level:
	LEVEL__ASK_UNKNOW_MSG = 10
	LEVEL__RE_LEARNING = 5

2005-08-22  Youchen Lee  <youchen.lee@gmail.com>

	* configure.ac: Added zh_CN.po ( Edited by Optical-dlz ).
	
	* src/nancy_bot/msgdata.cpp,
	src/nancy_bot/msgdata.h: Added mkdir of ~/.pcmanx/nancy_bot/.
	Added function my_copy(), but cause ld error.

	* src/view/telnetcon.cpp: Changed nancy CONFIG_PATH to
	~/.pcmanx/nancy_bot/ .

2005-08-21  Youchen Lee  <youchen.lee@gmail.com>

	* configure.ac,
	README: Set --enable-nancy as default.
	* TODO: Added severial todos.
